// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CheckBoxField works as expected 1`] = `
.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 1rem;
  font: 1.2rem;
}

.c2 {
  margin: 0rem;
  width: 1px;
  position: relative;
  left: 2.5rem;
  z-index: -1;
}

.c2:checked + span {
  background: hsla(204,70%,53%) -19px top no-repeat;
  border-color: hsla(204,70%,53%);
}

.c2:checked + span:before {
  content: '';
  position: absolute;
  top: 16%;
  right: 34%;
  display: inline-block;
  -webkit-transform: rotate(45deg);
  -ms-transform: rotate(45deg);
  transform: rotate(45deg);
  height: 12px;
  width: 7px;
  border-bottom: 3px solid hsla(0,0%,100%);
  border-right: 3px solid hsla(0,0%,100%);
}

.c4 {
  width: 100%;
  color: hsla(0,0%,40%);
  cursor: pointer;
}

.c4 a {
  color: hsl(166,100%,34%);
  padding: 0 !important;
  -webkit-transition: color 0.2s ease-in-out;
  transition: color 0.2s ease-in-out;
}

.c4 a:hover {
  color: hsla(146,64%,36%);
}

.c3 {
  display: inline-block;
  position: relative;
  top: -1px;
  width: 2.5rem;
  height: 2.5rem;
  margin: -1px 0px 0 0;
  margin-right: 8px;
  vertical-align: middle;
  background: hsla(0,0%,100%);
  border: 1px solid hsla(0,0%,80%);
  border-radius: 0.2rem;
  cursor: pointer;
}

.c0 {
  margin: 1rem auto;
  padding: 2rem 1rem;
  width: 100%;
}

.c0 button,
.c0 a {
  padding-right: 3rem;
  padding-left: 3rem;
}

.c0 > label {
  width: 100%;
  display: block;
  font-weight: 700;
  font-size: 1.7rem;
}

<div>
  <form
    class="c0"
  >
    <div
      class="c1"
    >
      <input
        aria-label="Test Input"
        aria-required="false"
        class="c2"
        form="[object Object]"
        id="test-input"
        name="test-input"
        type="checkbox"
      />
      <span
        aria-checked="false"
        aria-label="Test Input"
        aria-required="false"
        class="c3"
        role="checkbox"
      />
      <label
        class="c4"
        for="test-input"
      >
        Test Input
      </label>
    </div>
  </form>
</div>
`;

exports[`InputField does not trigger validation if not required 1`] = `
.c2 {
  color: hsla(0,0%,40%);
  font-size: 1.4rem;
  font-weight: 500;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
}

.c4 {
  width: 100%;
  height: 4.4rem;
  font-size: 1.4rem;
  margin: 0.5rem 0;
  padding: 1.2rem;
  opacity: 1;
  background: hsla(0,0%,100%);
  border: 1px solid hsla(0,0%,80%);
  border-radius: 0.2rem;
  color: hsla(0,0%,40%);
}

.c4::-webkit-input-placeholder {
  color: hsla(0,0%,52%);
  font-weight: 300;
  font-style: italic;
}

.c4::-moz-placeholder {
  color: hsla(0,0%,52%);
  font-weight: 300;
  font-style: italic;
}

.c4:-ms-input-placeholder {
  color: hsla(0,0%,52%);
  font-weight: 300;
  font-style: italic;
}

.c4::placeholder {
  color: hsla(0,0%,52%);
  font-weight: 300;
  font-style: italic;
}

.c1 {
  font-size: 1.4rem;
  line-height: 14px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c1 > div.wrapper {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c0 {
  margin: 1rem auto;
  padding: 2rem 1rem;
  width: 100%;
}

.c0 button,
.c0 a {
  padding-right: 3rem;
  padding-left: 3rem;
}

.c0 > label {
  width: 100%;
  display: block;
  font-weight: 700;
  font-size: 1.7rem;
}

<div>
  <form
    class="c0"
  >
    <div
      class="c1"
    >
      <label
        class="c2"
        for="test-input"
      >
        Test Input
         
      </label>
      <div
        class="c3"
      >
        <input
          aria-label="Test Input"
          aria-required="false"
          class="c4"
          id="test-input"
          name="test-input"
          placeholder=""
          type="text"
        />
      </div>
    </div>
  </form>
</div>
`;

exports[`InputField renders properly and on submit shows validation errors 1`] = `
.c2 {
  color: hsla(0,0%,40%);
  font-size: 1.4rem;
  font-weight: 500;
}

.c8 {
  color: hsla(0,79%,63%);
  margin: 0 0 1rem 0;
  display: inline-block;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
}

.c5 {
  width: 100%;
  height: 4.4rem;
  font-size: 1.4rem;
  margin: 0.5rem 0;
  padding: 1.2rem;
  opacity: 1;
  background: hsla(0,0%,100%);
  border: 1px solid hsla(0,0%,80%);
  border-radius: 0.2rem;
  color: hsla(0,0%,40%);
}

.c5::-webkit-input-placeholder {
  color: hsla(0,0%,52%);
  font-weight: 300;
  font-style: italic;
}

.c5::-moz-placeholder {
  color: hsla(0,0%,52%);
  font-weight: 300;
  font-style: italic;
}

.c5:-ms-input-placeholder {
  color: hsla(0,0%,52%);
  font-weight: 300;
  font-style: italic;
}

.c5::placeholder {
  color: hsla(0,0%,52%);
  font-weight: 300;
  font-style: italic;
}

.c1 {
  font-size: 1.4rem;
  line-height: 14px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c1 > div.wrapper {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c1 > input {
  border: 1px solid hsla(29,94%,62%);
}

.c1 > .react-select-container .react-select__control {
  border-color: hsla(29,94%,62%);
}

.c7 {
  width: 4rem;
  height: 4rem;
  margin: 0.6rem 0.5rem;
  fill: hsla(0,0%,80%);
  -webkit-transition: fill 0.2s;
  transition: fill 0.2s;
}

.c7:hover {
  cursor: pointer;
  fill: hsla(0,0%,7%);
}

.c6 {
  margin: 0;
  border: 0;
  padding: 0;
}

.c3 {
  color: hsla(0,79%,63%);
  margin-left: 0.5rem;
  display: inline-block;
}

.c0 {
  margin: 1rem auto;
  padding: 2rem 1rem;
  width: 100%;
}

.c0 button,
.c0 a {
  padding-right: 3rem;
  padding-left: 3rem;
}

.c0 > label {
  width: 100%;
  display: block;
  font-weight: 700;
  font-size: 1.7rem;
}

<div>
  <form
    class="c0"
  >
    <div
      class="c1"
    >
      <label
        class="c2"
        for="test-input"
      >
        Test Input
         
        <span
          aria-label="Indicador visual de campo obrigatório"
          class="c3"
        >
          *
        </span>
      </label>
      <div
        class="c4"
      >
        <input
          aria-label="Test Input"
          aria-required="true"
          class="c5"
          id="test-input"
          name="test-input"
          placeholder=""
          type="text"
        />
        <span
          class="c6"
          name="help_button"
          tabindex="0"
        >
          <svg
            class="c7"
            fill="currentColor"
            height="1em"
            id="test-input"
            stroke="currentColor"
            stroke-width="0"
            viewBox="0 0 1024 1024"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm0 708c-22.1 0-40-17.9-40-40s17.9-40 40-40 40 17.9 40 40-17.9 40-40 40zm62.9-219.5a48.3 48.3 0 0 0-30.9 44.8V620c0 4.4-3.6 8-8 8h-48c-4.4 0-8-3.6-8-8v-21.5c0-23.1 6.7-45.9 19.9-64.9 12.9-18.6 30.9-32.8 52.1-40.9 34-13.1 56-41.6 56-72.7 0-44.1-43.1-80-96-80s-96 35.9-96 80v7.6c0 4.4-3.6 8-8 8h-48c-4.4 0-8-3.6-8-8V420c0-39.3 17.2-76 48.4-103.3C430.4 290.4 470 276 512 276s81.6 14.5 111.6 40.7C654.8 344 672 380.7 672 420c0 57.8-38.1 109.8-97.1 132.5z"
            />
          </svg>
        </span>
      </div>
      <span
        class="c8"
      >
        Este campo é obrigatório
      </span>
    </div>
  </form>
</div>
`;

exports[`SelectField does not trigger validation if not required 1`] = `
.c2 {
  color: hsla(0,0%,40%);
  font-size: 1.4rem;
  font-weight: 500;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
}

.c1 {
  font-size: 1.4rem;
  line-height: 14px;
}

.c1 > div.wrapper {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c4 {
  width: 100%;
  margin: 0.5rem 0;
  font-size: 1.4rem;
}

.c0 {
  margin: 1rem auto;
  padding: 2rem 1rem;
  width: 100%;
}

.c0 button,
.c0 a {
  padding-right: 3rem;
  padding-left: 3rem;
}

.c0 > label {
  width: 100%;
  display: block;
  font-weight: 700;
  font-size: 1.7rem;
}

<div>
  <form
    class="c0"
  >
    <div
      class="c1"
    >
      <label
        class="c2"
        for="test-input"
      >
        Test Input
      </label>
      <div
        class="c3"
      >
        <div
          class="c4 react-select-container css-dyr6gj-container"
          id="test-input"
        >
          <div
            class="react-select__control css-1b7oqde-control"
          >
            <div
              class="react-select__value-container css-g1d714-ValueContainer"
            >
              <div
                class="react-select__placeholder css-1wa3eu0-placeholder"
              >
                Select...
              </div>
              <div
                class="css-b8ldur-Input"
              >
                <div
                  class="react-select__input"
                  style="display: inline-block;"
                >
                  <input
                    aria-autocomplete="list"
                    aria-label="Test Input"
                    autocapitalize="none"
                    autocomplete="off"
                    autocorrect="off"
                    id="react-select-3-input"
                    spellcheck="false"
                    style="box-sizing: content-box; width: 2px; border: 0px; opacity: 1; outline: 0; padding: 0px;"
                    tabindex="0"
                    type="text"
                    value=""
                  />
                  <div
                    style="position: absolute; top: 0px; left: 0px; visibility: hidden; height: 0px; overflow: scroll; white-space: pre; font-size: 1.4rem; font-family: 'Montserrat'; font-weight: 400; letter-spacing: normal; text-transform: none;"
                  />
                </div>
              </div>
            </div>
            <div
              class="react-select__indicators css-1hb7zxy-IndicatorsContainer"
            >
              <span
                class="react-select__indicator-separator css-1okebmr-indicatorSeparator"
              />
              <div
                aria-hidden="true"
                class="react-select__indicator react-select__dropdown-indicator css-tlfecz-indicatorContainer"
              >
                <svg
                  aria-hidden="true"
                  class="css-6q0nyr-Svg"
                  focusable="false"
                  height="20"
                  viewBox="0 0 20 20"
                  width="20"
                >
                  <path
                    d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
                  />
                </svg>
              </div>
            </div>
          </div>
          <input
            name="test-input"
            type="hidden"
            value=""
          />
        </div>
      </div>
    </div>
  </form>
</div>
`;

exports[`SelectField renders properly and on submit shows validation errors 1`] = `
.c2 {
  color: hsla(0,0%,40%);
  font-size: 1.4rem;
  font-weight: 500;
}

.c8 {
  color: hsla(0,79%,63%);
  margin: 0 0 1rem 0;
  display: inline-block;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
}

.c1 {
  font-size: 1.4rem;
  line-height: 14px;
}

.c1 > div.wrapper {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c1 > input {
  border: 1px solid hsla(29,94%,62%);
}

.c1 > .react-select-container .react-select__control {
  border-color: hsla(29,94%,62%);
}

.c7 {
  width: 4rem;
  height: 4rem;
  margin: 0.6rem 0.5rem;
  fill: hsla(0,0%,80%);
  -webkit-transition: fill 0.2s;
  transition: fill 0.2s;
}

.c7:hover {
  cursor: pointer;
  fill: hsla(0,0%,7%);
}

.c6 {
  margin: 0;
  border: 0;
  padding: 0;
}

.c3 {
  color: hsla(0,79%,63%);
  margin-left: 0.5rem;
  display: inline-block;
}

.c5 {
  width: 100%;
  margin: 0.5rem 0;
  font-size: 1.4rem;
}

.c0 {
  margin: 1rem auto;
  padding: 2rem 1rem;
  width: 100%;
}

.c0 button,
.c0 a {
  padding-right: 3rem;
  padding-left: 3rem;
}

.c0 > label {
  width: 100%;
  display: block;
  font-weight: 700;
  font-size: 1.7rem;
}

<div>
  <form
    class="c0"
  >
    <div
      class="c1"
    >
      <label
        class="c2"
        for="test-input"
      >
        Test Input
        <span
          aria-label="Indicador visual de campo obrigatório"
          class="c3"
        >
          *
        </span>
      </label>
      <div
        class="c4"
      >
        <div
          class="c5 react-select-container css-dyr6gj-container"
          id="test-input"
        >
          <span
            aria-live="polite"
            class="css-1laao21-a11yText"
          >
            <span
              id="aria-selection-event"
            >
               
              
            </span>
            <span
              id="aria-context"
            >
               
                0 results available. Test Input is focused ,type to refine list, press Down to open the menu, 
            </span>
          </span>
          <div
            class="react-select__control react-select__control--is-focused css-icbd0f-control"
          >
            <div
              class="react-select__value-container css-g1d714-ValueContainer"
            >
              <div
                class="react-select__placeholder css-1wa3eu0-placeholder"
              >
                Select...
              </div>
              <div
                class="css-b8ldur-Input"
              >
                <div
                  class="react-select__input"
                  style="display: inline-block;"
                >
                  <input
                    aria-autocomplete="list"
                    aria-label="Test Input"
                    autocapitalize="none"
                    autocomplete="off"
                    autocorrect="off"
                    id="react-select-2-input"
                    spellcheck="false"
                    style="box-sizing: content-box; width: 2px; border: 0px; opacity: 1; outline: 0; padding: 0px;"
                    tabindex="0"
                    type="text"
                    value=""
                  />
                  <div
                    style="position: absolute; top: 0px; left: 0px; visibility: hidden; height: 0px; overflow: scroll; white-space: pre; font-size: 1.4rem; font-family: 'Montserrat'; font-weight: 400; letter-spacing: normal; text-transform: none;"
                  />
                </div>
              </div>
            </div>
            <div
              class="react-select__indicators css-1hb7zxy-IndicatorsContainer"
            >
              <span
                class="react-select__indicator-separator css-1okebmr-indicatorSeparator"
              />
              <div
                aria-hidden="true"
                class="react-select__indicator react-select__dropdown-indicator css-1gtu0rj-indicatorContainer"
              >
                <svg
                  aria-hidden="true"
                  class="css-6q0nyr-Svg"
                  focusable="false"
                  height="20"
                  viewBox="0 0 20 20"
                  width="20"
                >
                  <path
                    d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
                  />
                </svg>
              </div>
            </div>
          </div>
          <input
            name="test-input"
            type="hidden"
            value=""
          />
        </div>
        <span
          class="c6"
          name="help_button"
          tabindex="0"
        >
          <svg
            class="c7"
            fill="currentColor"
            height="1em"
            id="test-input"
            stroke="currentColor"
            stroke-width="0"
            viewBox="0 0 1024 1024"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm0 708c-22.1 0-40-17.9-40-40s17.9-40 40-40 40 17.9 40 40-17.9 40-40 40zm62.9-219.5a48.3 48.3 0 0 0-30.9 44.8V620c0 4.4-3.6 8-8 8h-48c-4.4 0-8-3.6-8-8v-21.5c0-23.1 6.7-45.9 19.9-64.9 12.9-18.6 30.9-32.8 52.1-40.9 34-13.1 56-41.6 56-72.7 0-44.1-43.1-80-96-80s-96 35.9-96 80v7.6c0 4.4-3.6 8-8 8h-48c-4.4 0-8-3.6-8-8V420c0-39.3 17.2-76 48.4-103.3C430.4 290.4 470 276 512 276s81.6 14.5 111.6 40.7C654.8 344 672 380.7 672 420c0 57.8-38.1 109.8-97.1 132.5z"
            />
          </svg>
        </span>
      </div>
      <span
        class="c8"
      >
        Este campo é obrigatório
      </span>
    </div>
  </form>
</div>
`;

exports[`SwitchField works as expected 1`] = `
.c2 {
  color: hsla(0,0%,40%);
  font-size: 1.4rem;
  font-weight: 500;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
}

.c1 {
  margin: 0.5rem 0 1rem 0;
}

.c3 {
  height: 0;
  width: 0;
  visibility: hidden;
}

.c3:checked + div label > span {
  left: calc(100% - 2px);
  -webkit-transform: translateX(-100%);
  -ms-transform: translateX(-100%);
  transform: translateX(-100%);
}

.c6 {
  width: 80px;
  height: 40px;
  margin-top: 0.5rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  cursor: pointer;
  background: white;
  border-radius: 80px;
  border: 2px solid hsla(0,0%,52%);
  position: relative;
  -webkit-transition: color background-color 0.5s;
  transition: color background-color 0.5s;
}

.c6 > p {
  color: hsla(0,0%,52%);
  padding: 0.5em;
  font-size: 0.8em;
  font-weight: 700;
  text-transform: uppercase;
}

.c6 > span {
  content: '';
  position: absolute;
  top: 1px;
  left: 2px;
  width: calc(40px - 6px);
  height: calc(40px - 6px);
  border-radius: calc(40px - 5px);
  -webkit-transition: 0.2s;
  transition: 0.2s;
  background: hsla(0,0%,52%);
  box-shadow: 0 0 2px 0 rgba(10,10,10,0.29);
}

.c6:active span {
  width: calc(40px + 10px);
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c0 {
  margin: 1rem auto;
  padding: 2rem 1rem;
  width: 100%;
}

.c0 button,
.c0 a {
  padding-right: 3rem;
  padding-left: 3rem;
}

.c0 > label {
  width: 100%;
  display: block;
  font-weight: 700;
  font-size: 1.7rem;
}

<div>
  <form
    class="c0"
  >
    <div
      class="c1"
    >
      <label
        class="c2"
      >
        Test Input
      </label>
      <input
        aria-hidden="false"
        class="c3"
        id="test-input"
        name="test-input"
        type="checkbox"
      />
      <div
        class="c4"
      >
        <div
          class="c5"
        >
          <label
            class="c6"
            for="test-input"
          >
            <p>
              Não
            </p>
            <span />
          </label>
        </div>
      </div>
    </div>
  </form>
</div>
`;

exports[`TextField does not trigger validation if not required 1`] = `
.c2 {
  color: hsla(0,0%,40%);
  font-size: 1.4rem;
  font-weight: 500;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
}

.c1 {
  font-size: 1.4rem;
  line-height: 14px;
}

.c1 > div.wrapper {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c4 {
  width: 100%;
  height: 12rem;
  font-size: 1.4rem;
  margin: 0.5rem 0;
  padding: 1rem;
  background: white;
  border: 1px solid hsla(0,0%,80%);
  border-radius: 0.5rem;
  color: hsla(0,0%,40%);
}

.c0 {
  margin: 1rem auto;
  padding: 2rem 1rem;
  width: 100%;
}

.c0 button,
.c0 a {
  padding-right: 3rem;
  padding-left: 3rem;
}

.c0 > label {
  width: 100%;
  display: block;
  font-weight: 700;
  font-size: 1.7rem;
}

<div>
  <form
    class="c0"
  >
    <div
      class="c1"
    >
      <label
        class="c2"
        for="test-input"
      >
        Test Input
      </label>
      <div
        class="c3"
      >
        <textarea
          aria-label="Test Input"
          aria-required="false"
          class="c4"
          id="test-input"
          maxlength="1000"
          name="test-input"
          type="text"
        />
      </div>
      
    </div>
  </form>
</div>
`;

exports[`TextField renders properly and on submit shows validation errors 1`] = `
.c2 {
  color: hsla(0,0%,40%);
  font-size: 1.4rem;
  font-weight: 500;
}

.c8 {
  color: hsla(0,79%,63%);
  margin: 0 0 1rem 0;
  display: inline-block;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
}

.c1 {
  font-size: 1.4rem;
  line-height: 14px;
}

.c1 > div.wrapper {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c1 > input {
  border: 1px solid hsla(29,94%,62%);
}

.c1 > .react-select-container .react-select__control {
  border-color: hsla(29,94%,62%);
}

.c7 {
  width: 4rem;
  height: 4rem;
  margin: 0.6rem 0.5rem;
  fill: hsla(0,0%,80%);
  -webkit-transition: fill 0.2s;
  transition: fill 0.2s;
}

.c7:hover {
  cursor: pointer;
  fill: hsla(0,0%,7%);
}

.c6 {
  margin: 0;
  border: 0;
  padding: 0;
}

.c3 {
  color: hsla(0,79%,63%);
  margin-left: 0.5rem;
  display: inline-block;
}

.c5 {
  width: 100%;
  height: 12rem;
  font-size: 1.4rem;
  margin: 0.5rem 0;
  padding: 1rem;
  background: white;
  border: 1px solid hsla(0,0%,80%);
  border-radius: 0.5rem;
  color: hsla(0,0%,40%);
}

.c0 {
  margin: 1rem auto;
  padding: 2rem 1rem;
  width: 100%;
}

.c0 button,
.c0 a {
  padding-right: 3rem;
  padding-left: 3rem;
}

.c0 > label {
  width: 100%;
  display: block;
  font-weight: 700;
  font-size: 1.7rem;
}

<div>
  <form
    class="c0"
  >
    <div
      class="c1"
    >
      <label
        class="c2"
        for="test-input"
      >
        Test Input
        <span
          aria-label="Indicador visual de campo obrigatório"
          class="c3"
        >
          *
        </span>
      </label>
      <div
        class="c4"
      >
        <textarea
          aria-label="Test Input"
          aria-required="true"
          class="c5"
          id="test-input"
          maxlength="1000"
          name="test-input"
          type="text"
        />
        <span
          class="c6"
          name="help_button"
          tabindex="0"
        >
          <svg
            class="c7"
            fill="currentColor"
            height="1em"
            id="test-input"
            stroke="currentColor"
            stroke-width="0"
            viewBox="0 0 1024 1024"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm0 708c-22.1 0-40-17.9-40-40s17.9-40 40-40 40 17.9 40 40-17.9 40-40 40zm62.9-219.5a48.3 48.3 0 0 0-30.9 44.8V620c0 4.4-3.6 8-8 8h-48c-4.4 0-8-3.6-8-8v-21.5c0-23.1 6.7-45.9 19.9-64.9 12.9-18.6 30.9-32.8 52.1-40.9 34-13.1 56-41.6 56-72.7 0-44.1-43.1-80-96-80s-96 35.9-96 80v7.6c0 4.4-3.6 8-8 8h-48c-4.4 0-8-3.6-8-8V420c0-39.3 17.2-76 48.4-103.3C430.4 290.4 470 276 512 276s81.6 14.5 111.6 40.7C654.8 344 672 380.7 672 420c0 57.8-38.1 109.8-97.1 132.5z"
            />
          </svg>
        </span>
      </div>
      
      <span
        class="c8"
      >
        Este campo é obrigatório
      </span>
    </div>
  </form>
</div>
`;
